UI | Fixed tabs broken and patient name overflow | Navaneeth

--- a/ui/app/styles/clinical/_layout.scss
+++ b/ui/app/styles/clinical/_layout.scss
@@ -231,6 +231,7 @@ body{
                             text-align: right;
                             height:33px;
                             overflow:hidden;
+                            width: 140px;
                         }
                         &.patient-detail-pointer{
                             position: absolute;
